--- a/index.html
+++ b/index.html
@@ -19,82 +19,87 @@
 
     <body>
         <main>
-            <section>
+            <section class="box">
                 <h2>Flexbox Row</h2>
-                <p>
+                <p class="cssdetail">
                     Use these three properties to create a Flexbox row layout.
                 </p>
-                <p>
-                    .row {
-                        display: flex;
-                        flex-direction: row;
-                        flex-wrap: wrap;
-                    }
+                <p class="csscode">
+<!--            -->  .row {
+<!--            -->     display: flex;
+<!--            -->     flex-direction: row;
+<!--            -->     flex-wrap: wrap;
+<!--            -->  }
                 </p>
             </section>
-            <section>
-                <h2>Flexbox Row</h2>
-                <p>
-                    Use these three properties to create a Flexbox row layout.
+            <section class="box">
+                <h2>Flexbox Column</h2>
+                <p class="cssdetail">
+                    Use this to create a Flexbox column layout.
                 </p>
-                <p>
-                    .row {
-                        display: flex;
-                        flex-direction: row;
-                        flex-wrap: wrap;
-                    }
-                </p>
-            </section>
-            <section>
-                <h2>Flexbox Row</h2>
-                <p>
-                    Use these three properties to create a Flexbox row layout.
-                </p>
-                <p>
-                    .row {
-                        display: flex;
-                        flex-direction: row;
-                        flex-wrap: wrap;
-                    }
+                <p class="csscode">
+<!--            -->  .column {
+<!--            -->     display: flex;
+<!--            -->     flex-direction: column;
+<!--            -->  }
                 </p>
             </section>
-            <section>
-                <h2>Flexbox Row</h2>
-                <p>
-                    Use these three properties to create a Flexbox row layout.
+            <section class="box">
+                <h2>CSS Grid Layout</h2>
+                <p class="cssdetail">
+                    Build a 12-column layout using CSS Grid.
                 </p>
-                <p>
-                    .row {
-                        display: flex;
-                        flex-direction: row;
-                        flex-wrap: wrap;
-                    }
-                </p>
-            </section>
-            <section>
-                <h2>Flexbox Row</h2>
-                <p>
-                    Use these three properties to create a Flexbox row layout.
-                </p>
-                <p>
-                    .row {
-                        display: flex;
-                        flex-direction: row;
-                        flex-wrap: wrap;
-                    }
+                <p class="csscode">
+<!--            -->  .grid {
+<!--            -->     display: grid;
+<!--            -->     width: 100%;
+<!--            -->     grid-template-columns: repeat(12,1fr);
+<!--            -->  }
                 </p>
             </section>
-            <section>
-                <h2>Flexbox Row</h2>
-                <p>
-                    Use these three properties to create a Flexbox row layout.
+            <section class="box">
+                <h2>Linear Gradient</h2>
+                <p class="cssdetail">
+                    This will create a background linear gradient from top to bottom.
                 </p>
-                <p>
-                    .row {
-                        display: flex;
-                        flex-direction: row;
-                        flex-wrap: wrap;
-                    }
+                <p class="csscode">
+<!--            -->  .linear-gradient-background {
+<!--            -->     background-image: linear-gradient(
+<!--            -->         rgba(232, 102, 236, 0.3) 0%,
+<!--            -->         rgba(232, 102, 236, 0.6) 100%
+<!--            -->     );
+<!--            -->  }
+                </p>
+            </section>
+            <section class="box">
+                <h2>Box Transition Glow</h2>
+                <p class="cssdetail">
+                    Use transition and box shadows to glow on hover.
+                </p>
+                <p class="csscode">
+<!--            -->  .code-card .card-header {
+<!--            -->     border-radius: 8px;
+<!--            -->     transition: all 0.5s ease-in-out;
+<!--            -->  }
+
+<!--            -->  .code-card:hover,
+<!--            -->  .code-card:hover .card-header {
+<!--            -->     box-shadow: inset 0px 0px 8px
+<!--            -->     rgba(232, 102, 236, 1), 0 9 15px
+<!--            -->     rgba(232, 102, 236, 1);
+<!--            -->  }
+                </p>
+            </section>
+            <section class="box">
+                <h2>Overlay Card with Title</h2>
+                <p class="cssdetail">
+                    Use position properties and negative margins to raise elements higher than their natural starting point.
+                </p>
+                <p class="csscode">
+<!--            -->  .card-header {
+<!--            -->     position: relative;
+<!--            -->     margin-top: -20px;
+<!--            -->  }
                 </p>
             </section>
         </main>
